--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         const posters = [
             { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/84/49/19962131.jpg', name: 'Plano de Vôo (2004)', url: 'https://www.dropbox.com/scl/fi/d2szrjeumwbbmlchsufqd/Plano-de-Voo-720p-D4V1.mkv?rlkey=ivx2cs862kuljb0woo3p293im&e=2&st=mgezau4d&dl=0', genre: 'Ação' },
             { image: 'https://br.web.img2.acsta.net/c_310_420/medias/nmedia/18/87/28/98/19873964.jpg', name: 'Tinha que Ser Você (2008)', url: 'https://www.dropbox.com/scl/fi/s5sfrk89bt3qzbhvdjsmy/TINHA-QUE-SER-VOC-_Emma-Thompson-e-Doustin.mp4?rlkey=kbc308mhbonqdl0rnabfq59qg&st=bd4rzxnr&dl=0', genre: 'Drama' },
-            { image: 'https://br.web.img2.acsta.net/pictures/210/461/21046189_20131002174340886.jpg', name: 'Frozen: Uma Aventura...', url: 'https://www.dropbox.com/scl/fi/ordkvh1h21t3co7lazoxb/Frozen-Uma-Aventura-Congelante-2013-4K-2160p-Dual-udio-Encoder-by-Carlos-Jos-WWW.BLUDV.TV.mkv?rlkey=1xkc1dizv0f7dc0r0vadsbrbs&st=i47o2o04&dl=0', genre: 'Aventura' },
+            { image: 'https://br.web.img2.acsta.net/pictures/210/461/21046189_20131002174340886.jpg', name: 'Frozen: Uma Aventura...', url: 'https://youtu.be/k8ZGZK-3faY?si=Z9AcV1jqmd4zBasI', genre: 'Aventura' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/4/4f/Frozen_2_poster.jpg', name: 'Frozen: II', url: 'https://www.dropbox.com/scl/fi/t0pfkd65ukf67bmxb54q3/Frozen.II.2020.2160p.UHD.BluRay.x265-DUAL.COMANDO.TO.mkv?rlkey=w1xmwkpzuw9qx8osposv93dgn&st=wc2riqxq&dl=0', genre: 'Aventura' },
             { image: 'https://br.web.img3.acsta.net/medias/nmedia/18/91/05/16/20127313.jpg', name: 'Para Sempre', url: 'https://www.dropbox.com/scl/fi/398gmgpv2ll62tpkyb8v8/Para-Sempre.mp4?rlkey=fpso8zdqff32erliw6sa814ow&st=cgfiklww&dl=0' }
         ];
