--- a/index.html
+++ b/index.html
@@ -232,11 +232,18 @@
 
     <script>
         const posters = [
-            { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/84/49/19962131.jpg', name: 'Plano de Vôo (2004)', url: 'https://www.youtube.com/embed/mm_XY6FuA3k', genre: 'Ação' },
-            { image: 'https://br.web.img2.acsta.net/c_310_420/medias/nmedia/18/87/28/98/19873964.jpg', name: 'Tinha que Ser Você (2008)', url: 'https://www.youtube.com/embed/e5wqNzYaWu4', genre: 'Drama' },
-            { image: 'https://br.web.img2.acsta.net/pictures/210/461/21046189_20131002174340886.jpg', name: 'Frozen: Uma Aventura...', url: 'https://www.youtube.com/embed/ZVfnb8aOhcs', genre: 'Aventura' },
+            { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/84/49/19962131.jpg', name: 'Plano de Vôo', url: 'https://www.youtube.com/embed/mm_XY6FuA3k', genre: 'Ação' },
+            { image: 'https://br.web.img2.acsta.net/c_310_420/medias/nmedia/18/87/28/98/19873964.jpg', name: 'Tinha que Ser...', url: 'https://www.youtube.com/embed/e5wqNzYaWu4', genre: 'Drama' },
+            { image: 'https://br.web.img2.acsta.net/pictures/210/461/21046189_20131002174340886.jpg', name: 'Frozen: Uma Avent...', url: 'https://www.youtube.com/embed/ZVfnb8aOhcs', genre: 'Aventura' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/4/4f/Frozen_2_poster.jpg', name: 'Frozen: II', url: 'https://www.youtube.com/embed/wyvnlbaGYTE', genre: 'Aventura' },
-            { image: 'https://br.web.img3.acsta.net/medias/nmedia/18/91/05/16/20127313.jpg', name: 'Para Sempre', url: 'https://www.youtube.com/embed/IawWaP3S4qw' }
+            { image: 'https://br.web.img3.acsta.net/medias/nmedia/18/91/05/16/20127313.jpg', name: 'Para Sempre', url: 'https://www.youtube.com/embed/IawWaP3S4qw', genre: 'Drama' },
+            { image: 'https://upload.wikimedia.org/wikipedia/pt/d/da/Leap_year_poster.jpg', name: 'Casa Comigo?', url: 'https://www.youtube.com/embed/XcokcEA_ats', genre: 'Comédia' },
+            { image: 'https://br.web.img3.acsta.net/c_310_420/medias/nmedia/18/87/13/77/19872396.jpg', name: 'O Melhor Amigo da...', url: 'https://www.youtube.com/embed/HI_GR8kKMuI', genre: 'Comédia' },
+            { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/32/17/19874294.jpg', name: 'A Ultima Música', url: 'https://www.youtube.com/embed/NT5xS26Fla8', genre: 'Drama' },
+            { image: 'https://lumiere-a.akamaihd.net/v1/images/image003_13a0fcb9.jpeg?region=0,0,1080,1350', name: 'Descedentes: A Ascen...', url: 'https://www.youtube.com/embed/4mW2g725l3I', genre: 'Comédia' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/43bedd3729685ea324304d157fe76364027579527a9ccea323fb3868f075c3bc.jpg', name: 'Remanescentes...', url: 'https://www.youtube.com/embed/06UDLSRHRTw', genre: 'Drama' },
+
+        
         ];
 
         const container = document.querySelector('.container');
