--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
         <a href="#" onclick="filterByGenre('Comédia')">Comédia</a>
         <a href="#" onclick="filterByGenre('Drama')">Drama</a>
         <a href="#" onclick="filterByGenre('Ficção')">Ficção Científica</a>
+        <a href="#" onclick="filterByGenre('Terror')">Terror</a>
+
     </div>
 
     <img class="logo" src="https://i.ibb.co/61b7LQH/Stream-02-01-2025.png" alt="Gameflix Logo">
@@ -242,6 +244,8 @@
             { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/32/17/19874294.jpg', name: 'A Ultima Música', url: 'https://www.youtube.com/embed/NT5xS26Fla8', genre: 'Drama' },
             { image: 'https://lumiere-a.akamaihd.net/v1/images/image003_13a0fcb9.jpeg?region=0,0,1080,1350', name: 'Descedentes: A Ascen...', url: 'https://www.youtube.com/embed/4mW2g725l3I', genre: 'Comédia' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/43bedd3729685ea324304d157fe76364027579527a9ccea323fb3868f075c3bc.jpg', name: 'Remanescentes...', url: 'https://www.youtube.com/embed/06UDLSRHRTw', genre: 'Drama' },
+            { image: 'https://upload.wikimedia.org/wikipedia/pt/f/fe/Olaf%27s_Frozen_Adventure_poster.jpg', name: 'Frozen: Olaf Em...', url: 'https://www.youtube.com/embed/b8mB3oJwuuc', genre: 'Comédia' },
+            { image: 'https://br.web.img2.acsta.net/img/63/b2/63b2d305f79a69eb0a3bd837e8706399.jpg', name: 'Frozen: Febre Con...', url: 'https://www.youtube.com/embed/X4zGnU5wk4o', genre: 'Comédia' },
 
         
         ];
