--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/43bedd3729685ea324304d157fe76364027579527a9ccea323fb3868f075c3bc.jpg', name: 'Remanescentes...', url: 'https://www.youtube.com/embed/06UDLSRHRTw', genre: 'Drama' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/f/fe/Olaf%27s_Frozen_Adventure_poster.jpg', name: 'Frozen: Olaf Em...', url: 'https://www.youtube.com/embed/b8mB3oJwuuc', genre: 'Comédia' },
             { image: 'https://br.web.img2.acsta.net/img/63/b2/63b2d305f79a69eb0a3bd837e8706399.jpg', name: 'Frozen: Febre Con...', url: 'https://www.youtube.com/embed/X4zGnU5wk4o', genre: 'Comédia' },
+            { image: 'https://br.web.img3.acsta.net/img/bb/88/bb88410fdc3fdf712a1259aec1d4fb3a.jfif', name: 'Casamento San...', url: 'https://www.youtube.com/embed/mBz6rIQwNFc', genre: 'Terror' },
 
         
         ];
