--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             { image: 'https://br.web.img2.acsta.net/img/63/b2/63b2d305f79a69eb0a3bd837e8706399.jpg', name: 'Frozen: Febre Con...', url: 'https://www.youtube.com/embed/X4zGnU5wk4o', genre: 'Animação' },
             { image: 'https://br.web.img3.acsta.net/img/bb/88/bb88410fdc3fdf712a1259aec1d4fb3a.jfif', name: 'Casamento San...', url: 'https://www.youtube.com/embed/mBz6rIQwNFc', genre: 'Terror' },
             { image: 'https://lumiere-a.akamaihd.net/v1/images/gife454xsaa8wv-_3e8071e7.jpeg?region=0%2C0%2C1638%2C2048', name: 'Divertidamente 2', url: 'https://www.youtube.com/embed/oJ0dBw42NbY', genre: 'Animação' },
-            { image: 'https://i.uai.com.br/AqHYLwQKSv-RhQTkPJns9P6y8BE=/750x0/imgsapp2.uai.com.br/app/noticia_133890394703/2023/05/03/322578/poster-de-elementos_2_186724.jpeg', name: 'Elementos', url: 'https://www.youtube.com/embed/uDe-Id4euWw', genre: 'Animação' },
+            { image: 'https://br.web.img3.acsta.net/pictures/22/11/17/20/58/0132283.jpg', name: 'Elementos', url: 'https://www.youtube.com/embed/uDe-Id4euWw', genre: 'Animação' },
             { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgw5ePYJL2ttHUGHAuityQ7zU55o94_3FPD5VqFlQFBdPzXuR8bSkO1o-RjfjiwPoTmnE&usqp=CAU', name: 'Roubo Nas Alturas', url: 'https://www.youtube.com/embed/iBcK0HbGqk0', genre: 'Comédia' },
             { image: 'https://i.ibb.co/y6s9fTH/gife454xsaa8wv-3e8071e7.webp', name: 'Divertidamente', url: 'https://www.youtube.com/embed/aqIwVJSwauQ', genre: 'Animação' },
             { image: 'https://image.tmdb.org/t/p/w500/orA2sYnjNcGHJ9h88CWa2Vs7VlR.jpg', name: 'Garganta do Diabo', url: 'https://www.youtube.com/embed/_gM1XjC-z3U', genre: 'Ação' },
