--- a/index.html
+++ b/index.html
@@ -270,7 +270,18 @@
             { image: 'https://i.ibb.co/NS45WN0/20028692.webp', name: 'O Chamado 2', url: 'https://www.youtube.com/embed/OROECuP77Pk', genre: 'Terror' },
             { image: 'https://musicart.xboxlive.com/7/19ae3d00-0000-0000-0000-000000000002/504/image.jpg?w=1920&h=1080', name: 'O Chamado 3', url: 'https://www.youtube.com/embed/_fnTLauSqQ0', genre: 'Terror' },
             { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSST4l4F0LxpdAu7qIT0n_byc33VxWaZFn5Og&s', name: 'O Chamado 4', url: 'https://www.youtube.com/embed/poAbFZ_aPR0', genre: 'Terror' },
-
+            { image: 'https://limontorrents.com/storage/2020/10/Parasita-1.jpg', name: 'Parasita', url: 'https://www.youtube.com/embed/hZiEQ1yy-vw', genre: 'Drama' },
+            { image: 'https://br.web.img2.acsta.net/c_310_420/pictures/19/06/13/09/35/4216544.jpg', name: 'Misterios no Medit...', url: 'https://www.youtube.com/embed/hV2ujS5wg9w', genre: 'Comédia' },
+            { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/29/71/19874039.jpg', name: 'Falando Grego', url: 'https://www.youtube.com/embed/8NQkbaW0Kfc', genre: 'Comédia' },
+            { image: 'https://br.web.img3.acsta.net/c_310_420/medias/nmedia/18/87/02/90/19871261.jpg', name: 'Casamento Grego', url: 'https://www.youtube.com/embed/7DkIJxcL5i8', genre: 'Comédia' },
+            { image: 'https://br.web.img3.acsta.net/c_310_420/pictures/16/01/08/17/12/338081.jpg', name: 'Casamento Grego 2', url: 'https://www.youtube.com/embed/f4eMtJvBvA0', genre: 'Comédia' },
+            { image: 'https://br.web.img2.acsta.net/pictures/23/09/24/16/38/0302884.png', name: 'Casamento Grego 3', url: 'https://www.youtube.com/embed/WWfz0cXHlKI', genre: 'Comédia' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/acf04714c5c1d7762e1a52d4379fb22dfb87f75c8c9d1ac0340ab9f56c1d7487.jpg', name: 'Um Amor para...', url: 'https://www.youtube.com/embed/M5luSvB78lo', genre: 'Drama' },
+            { image: 'https://play-lh.googleusercontent.com/OkftMNNNrtpnQAGmSQULUO1c9_94gLOH42FPaDt-u9z_bYk7vLpx6bQzr8JEHbVU1ajLIonCNsU2uhcbGXc', name: 'Familia do Futuro', url: 'https://www.youtube.com/embed/jKWOt5TMAr8', genre: 'Animação' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/71e60c45d3beacaa7e78b975cf91e1802b27f5a94304fae84354ca0a02d9d8a5.jpg', name: 'A Nova Cinderela', url: 'https://www.youtube.com/embed/uVQmE6hV2LA', genre: 'Comédia' },
+            { image: 'https://play-lh.googleusercontent.com/CTWeYOJ2l-8NrN4Svug4gdXIuB3Z0BXQJZ2S6F99AzVZVConpmPRTVIOc8wg7NUGPWN1=w240-h480-rw', name: 'Lizzie Mcguire um...', url: 'https://www.youtube.com/embed/ZFHC4n3haNc', genre: 'Comédia' },
+            { image: 'https://br.web.img3.acsta.net/c_310_420/pictures/14/08/18/23/03/406517.jpg', name: 'Sem Prafa sem...', url: 'https://www.youtube.com/embed/bW2ufdWG_i0', genre: 'Comédia' },
+            { image: 'https://m.media-amazon.com/images/I/615ZMYhZvjL._AC_UF894,1000_QL80_.jpg', name: 'Guerra dos Mundos', url: 'https://www.youtube.com/embed/jbdVw6Luhu8', genre: 'Ação' },
 
 
 
