--- a/index.html
+++ b/index.html
@@ -312,6 +312,24 @@
             { image: 'https://br.web.img3.acsta.net/pictures/14/08/27/01/12/229200.jpg', name: 'Columbus Circle', url: 'https://www.youtube.com/embed/dklvpdToqD0', genre: 'Ação' },
             { image: 'https://play-lh.googleusercontent.com/0gAWoFjAWcpTkly78DdOmOO76xDx2n3To-cJI5on8u55SEuncw0MMUMz6YfGXZnSmJrH', name: 'Horas de Desespero', url: 'https://www.youtube.com/embed/DbHdG32uplU', genre: 'Ação' },
             { image: 'https://i.ibb.co/KmLvjBH/2790155.webp', name: 'Nas Profundezas do Mar...', url: 'https://www.youtube.com/embed/iC8V5fjYPeY', genre: 'Drama' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdPGVrX6dRr99x0dcjvdiF_9Am-vJcDCIYdQ&s', name: 'Paranoia', url: 'https://www.youtube.com/embed/j_ZePpFOLME', genre: 'Ação' },
+            { image: 'https://m.media-amazon.com/images/I/91UQCBxB+cL._AC_UF894,1000_QL80_.jpg', name: 'Invocação do Mal', url: 'https://www.youtube.com/embed/mTYM0fQ0foI', genre: 'Terror' },
+            { image: 'https://br.web.img2.acsta.net/c_310_420/pictures/16/04/18/20/43/025084.jpg', name: 'Invocação do Mal 2', url: 'https://www.youtube.com/embed/8CLwPfV_kCA', genre: 'Terror' },
+            { image: 'https://irs.www.warnerbros.com.br/keyart-jpeg/movies/media/browser/CONJURING3_V_DD_KA_TT_2160x2880_300dpi_BR.jpg', name: 'Invocação do Mal 3: A...', url: 'https://www.youtube.com/embed/aGbMD72lcjE', genre: 'Terror' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/ab9f599f7c91dfdb83ca312f92cfbdef7a460d9db8d8f2faa37e0a1fe9947bd8.jpg', name: 'O Tempo com Você', url: 'https://www.youtube.com/embed/C3OyRugLFx4', genre: 'Animação' },
+            { image: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEil-Kw5z71UaffYZi2-tNt9bIXfYMIGWdvdQ2d9dSJ0LWnykgjLyQTnt5aG_jwwjQZYTQIVUG65JStl_jF08LEaCTnlLDrfex38SsrSoY531VP7s2FRSeZSd84y4SVDw_8wH6n1XwAfW9E1bxd8mtNFGzOA00IIvvx5lFwET374K_m16uTsG79v6ou-/s1122/anime-a-voz-do-sil%C3%AAncio.jpeg', name: 'A Voz do Silêncio', url: 'https://www.youtube.com/embed/0D7LSP2mSUg', genre: 'Animação' },
+            { image: 'https://images.justwatch.com/poster/210091350/s718/the-lie.jpg', name: 'Mentira Incondicional', url: 'https://www.youtube.com/embed/5eyjLYqWnIU', genre: 'Drama' },
+            { image: 'https://br.web.img3.acsta.net/pictures/16/03/28/19/29/126618.jpg', name: 'O Dono do Jogo', url: 'https://www.youtube.com/embed/hsFvXKvhXUk', genre: 'Drama' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/bd6cf0c13d15dd1f0c2416708a2cb17922f137cda3a3378c20756de760614574.jpg', name: 'A Noite do Jogo', url: 'https://www.youtube.com/embed/E2ELlt5-8qg', genre: 'Comédia' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzorxV83dLJzCUDcwn82PSTICzGMfEK21K7w&s', name: 'A Orfã', url: 'https://www.youtube.com/embed/3wWxM0aZbfI', genre: 'Ação' },
+            { image: 'https://br.web.img3.acsta.net/pictures/22/07/13/17/20/2336764.png', name: 'A Orfã 2: A Ori...', url: 'https://www.youtube.com/embed/Ul5xkI2GzcA', genre: 'Ação' },
+            { image: 'https://play-lh.googleusercontent.com/8Mae0jOK0iG5cT3NnEqp9BI8KvfnTskHJHQAXCWHOl3rngJ4iYWl5DP9145jM8ag57uZfqUl-nARTZ2woA', name: 'Premonição', url: 'https://www.youtube.com/embed/lCNvcpeX_3c', genre: 'Ação' },
+            { image: 'https://br.web.img3.acsta.net/c_310_420/medias/nmedia/18/91/98/07/20172668.jpg', name: 'O Fugitivo', url: 'https://www.youtube.com/embed/DljD9NH85I4', genre: 'Ação' },
+            { image: 'https://images.justwatch.com/poster/249960933/s718/nunca-mais.jpg', name: 'Nunca Mais', url: 'https://www.youtube.com/embed/QJyyv3_ih0o', genre: 'Ação' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2N_I_jiNRxgIlZMwRp8EC28AsUaeNDM5pLQ&s', name: 'Naufrágo', url: 'https://www.youtube.com/embed/bJbWLOF6axQ', genre: 'Drama' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/f250e226eb729d54fd4c5d3c020b1f5e3bb6f98bc483de751d80b17070d5dec8.jpg', name: 'Corra', url: 'https://www.youtube.com/embed/1qphuplJ4W4', genre: 'Ação' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/a0be5dbed6b86e0d8dcf8eb57217954275ff1063e07a0c1584de0cc7fc6661fa.jpg', name: 'Premonições', url: 'https://www.youtube.com/embed/QQsVC-sGG3c', genre: 'Ação' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/76f9230b3a49f068224077be6913d8f3ed740dcb0e75f55a920dea412f43508b.jpg', name: 'Lenda Urbana', url: 'https://www.youtube.com/embed/qBVBCwCWnl4', genre: 'Terror' },
 
 
 
