--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -330,6 +331,12 @@
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/f250e226eb729d54fd4c5d3c020b1f5e3bb6f98bc483de751d80b17070d5dec8.jpg', name: 'Corra', url: 'https://www.youtube.com/embed/1qphuplJ4W4', genre: 'Ação' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/a0be5dbed6b86e0d8dcf8eb57217954275ff1063e07a0c1584de0cc7fc6661fa.jpg', name: 'Premonições', url: 'https://www.youtube.com/embed/QQsVC-sGG3c', genre: 'Ação' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/76f9230b3a49f068224077be6913d8f3ed740dcb0e75f55a920dea412f43508b.jpg', name: 'Lenda Urbana', url: 'https://www.youtube.com/embed/qBVBCwCWnl4', genre: 'Terror' },
+            { image: 'https://br.web.img3.acsta.net/pictures/20/09/29/20/41/5122915.jpg', name: 'Kadaver', url: 'https://www.youtube.com/embed/JVvR_YtRcwY', genre: 'Terror' },
+            { image: 'https://play-lh.googleusercontent.com/proxy/w1fTjPrxsInApYR4mVR29NtoGVTI_OY1UKItBNkewd78TCpuA53896d6nd7K0z-OvcR3mUh4rUXHrzvBb-y2wKClJms77yMB1OlOh_y4opFsfl9udnnxNgfzX31tKt9xoE30PY3Bo5EveH-UaJcifaj3PAYVLyzOJCEvXA', name: 'Atividade Paranormal:...', url: 'https://www.youtube.com/embed/eBGjpbzJ34A', genre: 'Terror' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/81a8cab1a1787fce9b44b4f4f649220fedbf33101cd4f2539f0d266e26b18484.jpg', name: 'Da Magia À Sedução', url: 'https://www.youtube.com/embed/Y9tSpuU528Y', genre: 'Romance' },
+            { image: 'https://images.justwatch.com/poster/176974384/s718/o-lobisomem.jpg', name: 'O Lobisomem', url: 'https://player.vimeo.com/video/1049472965', genre: 'Ação' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwZ22i_mVSxtZWbHsR5MvV6YJZqp_ASy0l5w&s', name: 'Sherlock Holmes', url: 'https://www.youtube.com/embed/fKDJQzk6tS8', genre: 'Ação' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/655a3800f867508deda9e0f46ecf1aba01faead4dd851e137114667a9037de96.jpg', name: 'Sherlock Holmes 2: O...', url: 'https://www.youtube.com/embed/budrUrVerGE', genre: 'Ação' },
 
 
 
