--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         const posters = [
             { image: 'https://br.web.img2.acsta.net/medias/nmedia/18/87/84/49/19962131.jpg', name: 'Plano de Vôo', url: 'https://www.youtube.com/embed/mm_XY6FuA3k', genre: 'Ação' },
             { image: 'https://br.web.img2.acsta.net/c_310_420/medias/nmedia/18/87/28/98/19873964.jpg', name: 'Tinha que Ser...', url: 'https://www.youtube.com/embed/e5wqNzYaWu4', genre: 'Drama' },
+            { image: 'https://play-lh.googleusercontent.com/yRQBdW5n_y6hTiFAlWGe69dIV4sjiYavCXWFD1eQOGldxKYMnUzqBDThk_BXr1JJ6XJS2w', name: 'Enrolados', url: 'https://www.youtube.com/embed/Rnpvf3_xs5s', genre: 'Drama' },
             { image: 'https://br.web.img2.acsta.net/pictures/210/461/21046189_20131002174340886.jpg', name: 'Frozen: Uma Avent...', url: 'https://www.youtube.com/embed/ZVfnb8aOhcs', genre: 'Animação' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/4/4f/Frozen_2_poster.jpg', name: 'Frozen: II', url: 'https://www.youtube.com/embed/wyvnlbaGYTE', genre: 'Animação' },
             { image: 'https://br.web.img3.acsta.net/medias/nmedia/18/91/05/16/20127313.jpg', name: 'Para Sempre', url: 'https://www.youtube.com/embed/IawWaP3S4qw', genre: 'Drama' },
